--- a/index.html
+++ b/index.html
@@ -6,10 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+
 </head>
 <body>
     
-    <h1>This is a Test message</h1>
+    
+    <section id='hero'>
+        <div class='container'>
+            <div class='logo alignLeft'>
+
+                <a href='/'><img src='img/logo.png' class='logo-img'></a>
+            </div> 
+
+            <nav class='navbar alignRight'>
+                <ul class='nav'>
+                    <li><a href='/'>Home</a></li>
+                    <li><a href='/'>Features</a></li>
+                    <li><a href='/'>Download</a></li>
+                    <li><a href='/'>Blog</a></li>
+                    <li><a href='/'>Contact</a></li>
+                </ul>
+            </nav>
+            <div class='cta'>
+                <div class='imgs'>
+                    <img src='img/iphone.png' class='iphone'>
+                </div>
+                <div class='cta-info'>
+                    <h2>Chocolate Pudding Dessert Jelly</h2>
+                    <p class='hero-para'>Fruitcake donut gummies. Candy liquorice biscout. Sugar plum jelly gummi bears brownie toffee cupcake caramels brownie cookie.</p>
+                    <a href='/' class='cta-button'><img src='img/phone-icon.png' class='phone-icon'>Download on appstore</a>
+                </div>
+            </div>
+        </div>  
+    </section>
 
 
 
