--- a/index.html
+++ b/index.html
@@ -64,12 +64,59 @@
                     <p>Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
                 </div>
             </div>
-
-
+        </div>
+    </section>
+    <section id='nose'>
+        <div class="container">
+            <div class="download-info">
+                <h2> <span class="reddish">Chocolate</span> pudding dessert jelly <span class="reddish">fruit cake tart jelly wa</span>fer.</h2>
+                <p class="nose-p">Donut cupcake lemon drops dragée liquorice apple pie powder. Topping sweet lollipop soufflé chocolate liquorice candy canes. </p>
+                <a href='#' class='download-btn'>Download</a>
+            </div>
 
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <div class="logo-footer">
+                <img src='img/site-logo.png' class='footer-logo'>
+            </div>
+            <div class="col-4-footer">
+                <h4>Popular Posts</h4>
+                <ul class='ul-posts'>
+                    <li class="reddish-bg">I love donut <span class='block'>bonbon cakes</span></li>
+                    <li class="reddish-bg">Candy fruitcake biscuit chupa chups</li>
+                    <li class="reddish-bg">Candy fruitcake biscuit chupa chups</li>
 
+                </ul>
+            </div>
+            <div class="col-4-footer">
+                <h4>Suits on Twitter</h4>
+                <div class="ul-tweets">
+                    <li>SedLex <span class='block smallText'>10 hours ago</span></li>
+                    <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                    <li>Follow us</li>
+                </div>
+            </div>
+            <div class="col-4-footer">
+                <h4>About</h4>
+                <p class="p-about">Cheesecake tiramisu dragée gummies donut cotton candy ice cream I love halvah. Gummies croissant I love gummies gummies. Marshmallow I love gummies sugar plum jelly-o pie. </p>
+            </div>
+
+        </div>
+    </footer>
+
+    <section class="copyright">
+        <div class="container">
+            <p class="inline cr">copyright &copy; Justin Chang 2019</p>
+            <p class="inline me">www.github.com/justinxchang</p>
+            <div class="inline images">
+                <img src='img/facebook_32.png' class='fb'>
+                <img src='img/twitter_32.png' class='tw'>
+                <img src='img/dribble_32.png' class='dr'>
+            </div>
+        </div>
+    </section>
 
 
 
