--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/animate.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
 </head>
@@ -30,7 +32,9 @@
             </nav>
             <div class='cta'>
                 <div class='imgs'>
-                    <img src='img/iphone.png' class='iphone'>
+                    <img src='img/iphone-off.png' class='iphone'>
+                    <img src='img/iphone-btn.png' class='iphone-btn'>
+                    <img src='img/iphone-on.png' class='iphone-on'>
                 </div>
                 <div class='cta-info'>
                     <h2>Chocolate Pudding Dessert Jelly</h2>
@@ -122,6 +126,7 @@
 
 
     <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
