--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 <body>
     
-    
     <section id='hero'>
         <div class='container'>
             <div class='logo alignLeft'>
@@ -31,10 +30,10 @@
                 </ul>
             </nav>
             <div class='cta'>
-                <div class='imgs'>
+                <div class='imgs js-wp-2'>
                     <img src='img/iphone-off.png' class='iphone'>
                     <img src='img/iphone-btn.png' class='iphone-btn'>
-                    <img src='img/iphone-on.png' class='iphone-on'>
+                    <img src='img/iphone-on.png' class='iphone-on js-wp-3'>
                 </div>
                 <div class='cta-info'>
                     <h2>Chocolate Pudding Dessert Jelly</h2>
@@ -51,18 +50,18 @@
             <p class='p-features'>Donut sesame snaps donut pie dessert chupa chups wafer dragée. Gummies fruitcake chupa chups cookie liquorice. Chocolate pudding dessert jelly fruitcake tart jelly wafer. Sweet roll carrot cake croissant.</p>
 
             <div class="row">
-                <div class="col-4-app">
+                <div class="col-4-app wow fadeInLeft" data-wow-offset="10">
                     <img src='/img/col-1-img.png'>        
                     <h3>Scalable</h3>
                     <p>Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>    
                 </div>
-                <div class="col-4-app">
+                <div class="col-4-app wow fadeInUp">
                     <img src='/img/col-2-img.png'>
                     <h3>Instant</h3>
                     <p>Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
 
                 </div>
-                <div class="col-4-app">
+                <div class="col-4-app wow fadeInRight">
                     <img src='/img/col-3-img.png'>
                     <h3>Something</h3>
                     <p>Croissant ice cream macaroon cake. Dessert jelly beans candy cookie. Bear claw candy canes gingerbread caramels cake. Macaroon applicake gummi bears jelly marzipan.</p>
@@ -127,6 +126,7 @@
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
