--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
                 <a href='/'><img src='img/logo.png' class='logo-img'></a>
             </div> 
 
-            <nav class='navbar alignRight'>
-                <ul class='nav'>
+            <nav class='navbar'>
+                <a class="burger-nav" href=""></a>
+                <ul class='nav alignRight'>
                     <li><a href='/'>Home</a></li>
-                    <li><a href='/'>Features</a></li>
+                    <li><a href='#app-features'>Features</a></li>
                     <li><a href='/'>Download</a></li>
                     <li><a href='/'>Blog</a></li>
                     <li><a href='/'>Contact</a></li>
